--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -18,7 +18,6 @@
         android:id="@+id/signup_cv"
         app:cardBackgroundColor="@color/colorDivider"
         app:cardCornerRadius="10dp"
-        android:background="@android:color/holo_red_dark"
         android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="72dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -240,15 +239,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         fancy:fb_defaultColor="@android:color/transparent"
-        fancy:fb_borderWidth="2dp"
+        fancy:fb_borderWidth="1dp"
         fancy:fb_borderColor="@color/colorBackground"
         fancy:fb_radius="90dp"
+        fancy:fb_textSize="12sp"
         fancy:fb_text="ENTER AS A GUEST"
         android:layout_marginTop="16dp"
         fancy:fb_textColor="@color/colorBackground"
         android:paddingVertical="10dp"
         android:layout_marginBottom="72dp"
-        android:layout_marginHorizontal="24dp"
+        android:layout_marginHorizontal="36dp"
         android:layout_gravity="center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
