--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -202,7 +202,7 @@
         app:layout_constraintTop_toBottomOf="@id/timenote_vp" />
 
     <ImageView
-        android:id="@+id/timenote_like"
+        android:id="@+id/timenote_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -212,14 +212,14 @@
         app:layout_constraintTop_toBottomOf="@id/timenote_buy" />
 
     <ImageView
-        android:id="@+id/timenote_comment"
+        android:id="@+id/timenote_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
         android:src="@drawable/ic_partage_sans_fleche_ok"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_like"
-        app:layout_constraintStart_toEndOf="@id/timenote_like"
-        app:layout_constraintTop_toTopOf="@id/timenote_like" />
+        app:layout_constraintBottom_toBottomOf="@id/timenote_comment"
+        app:layout_constraintStart_toEndOf="@id/timenote_comment"
+        app:layout_constraintTop_toTopOf="@id/timenote_comment" />
 
     <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/timenote_indicator"
@@ -239,9 +239,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_ajout_cal"
-        app:layout_constraintBottom_toBottomOf="@id/timenote_like"
+        app:layout_constraintBottom_toBottomOf="@id/timenote_comment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/timenote_like" />
+        app:layout_constraintTop_toTopOf="@id/timenote_comment" />
 
     <LinearLayout
         android:id="@+id/timenote_fl"
@@ -253,7 +253,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_like">
+        app:layout_constraintTop_toBottomOf="@id/timenote_comment">
 
         <ImageView
             android:id="@+id/timenote_pic_participant_one"
