--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -93,6 +93,21 @@
         <argument
             android:name="whereFrom"
             app:argType="boolean"/>
+        <action
+            android:id="@+id/action_profile_to_createTimenote"
+            app:destination="@id/createTimenote" />
+        <action
+            android:id="@+id/action_profile_to_followPage"
+            app:destination="@id/followPage" />
+        <action
+            android:id="@+id/action_profile_to_profileCalendar"
+            app:destination="@id/profileCalendar" />
+        <argument
+            android:name="from"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_profile_to_detailedTimenote"
+            app:destination="@id/detailedTimenote" />
     </fragment>
     <fragment
         android:id="@+id/timenoteAddress"
@@ -118,10 +133,26 @@
             android:name="timenoteBody"
             app:argType="com.timenoteco.timenote.model.TimenoteBody"
             app:nullable="true" />
+        <argument
+            android:name="from"
+            app:argType="integer"/>
     </fragment>
     <fragment
         android:id="@+id/previewTimenoteCreated"
         android:name="com.timenoteco.timenote.view.createTimenoteFlow.PreviewTimenoteCreated"
         android:label="fragment_preview_timenote_created"
-        tools:layout="@layout/fragment_preview_timenote_created" />
+        tools:layout="@layout/fragment_preview_timenote_created" >
+        <argument
+            android:name="from"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/followPage"
+        android:name="com.timenoteco.timenote.view.profileFlow.FollowPage"
+        android:label="fragment_follow_page"
+        tools:layout="@layout/fragment_follow_page" />
+    <fragment
+        android:id="@+id/profileCalendar"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfileCalendar"
+        android:label="ProfileCalendar" />
 </navigation>
